cart working, prods update, and much more

--- a/src/pages/ecommerce/ecommerce.css
+++ b/src/pages/ecommerce/ecommerce.css
@@ -1,7 +1,12 @@
 .products{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     flex-wrap: wrap;
-    justify-content: space-around;
     margin: 1em;
+}
+
+.prodmain{
+    display: flex;
+    flex-direction: row;
 }
